fb/main fixed問題修正

--- a/fb/main.html
+++ b/fb/main.html
@@ -91,7 +91,7 @@
             <div class="ml-20 mr-24">
                 <div class="flex mt-3">
                     <div class="fixed z-40 m-1" style="width: 15%">
-                        <div class="bg-transparent pl-2 container" style="margin-top: 3rem">
+                        <div class="bg-transparent pr-4 pl-2 container" style="margin-top: 3rem">
                             <ul class="list-reset text-sm">
                                 <li class="flex items-center mb-2 text-sm border border-transparent hover:border-grey-light hover:bg-grey-lightest" style="padding: 5px">
                                     <img class="w-4 h-4 mr-2" viewbox="0 0 1792 1792" src="bullet-list.svg">
