--- a/ig/index.html
+++ b/ig/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="">
     <title></title>
     <!-- <meta name="description" content=""> -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
 </head>
 
 <body>
