'fb/map/dairy更新'

--- a/fb/main.html
+++ b/fb/main.html
@@ -14,7 +14,7 @@
                 <div class="flex items-center py-2 mx-24">
                     <div class="w-1/2">
                         <div class="flex items-center">
-                            <div class="cursor-pointer mr-1">
+                            <div class="cursor-pointer mr-1" onclick="location.href='main.html'">
                                 <?xml version="1.0" encoding="utf-8"?>
                                 <svg class="w-7 h-7 rounded-lg" viewbox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M1579 128q35 0 60 25t25 60v1366q0 35-25 60t-60 25h-391v-595h199l30-232h-229v-148q0-56 23.5-84t91.5-28l122-1v-207q-63-9-178-9-136 0-217.5 80t-81.5 226v171h-200v232h200v595h-735q-35 0-60-25t-25-60v-1366q0-35 25-60t60-25h1366z" fill="#fff">
@@ -35,7 +35,7 @@
                         </div>
                     </div>
                     <div class="w-1/2 flex items-center justify-end text-xs font-bold">
-                        <a class="mr-4 block no-underline flex items-center" href="#">
+                        <a class="mr-4 block no-underline flex items-center" href="fbIndex.html">
                             <img class="h-6 w-6 rounded-full" src="photo/頭貼.jpg">
                             <span class="text-sm text-white ml-1">
                                 杜沐安
@@ -46,10 +46,11 @@
                         </a>
                         <div class="px-3">
                             <a class="no-underline" href="#">
-                                <svg class="w-6 h-6" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M7 8a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm0 1c2.15 0 4.2.4 6.1 1.09L12 16h-1.25L10 20H4l-.75-4H2L.9 10.09A17.93 17.93 0 0 1 7 9zm8.31.17c1.32.18 2.59.48 3.8.92L18 16h-1.25L16 20h-3.96l.37-2h1.25l1.65-8.83zM13 0a4 4 0 1 1-1.33 7.76 5.96 5.96 0 0 0 0-7.52C12.1.1 12.53 0 13 0z">
-                                    </path>
-                                </svg>
+<!--                                <svg class="w-6 h-6" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">-->
+<!--                                    <path d="M7 8a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm0 1c2.15 0 4.2.4 6.1 1.09L12 16h-1.25L10 20H4l-.75-4H2L.9 10.09A17.93 17.93 0 0 1 7 9zm8.31.17c1.32.18 2.59.48 3.8.92L18 16h-1.25L16 20h-3.96l.37-2h1.25l1.65-8.83zM13 0a4 4 0 1 1-1.33 7.76 5.96 5.96 0 0 0 0-7.52C12.1.1 12.53 0 13 0z">-->
+<!--                                    </path>-->
+<!--                                </svg>-->
+                                <img class="w-6 h-6" src="icon/invite.png">
                             </a>
                             <a class="no-underline px-2" href="#">
                                 <?xml version="1.0" encoding="UTF-8"?>
@@ -93,7 +94,7 @@
                     <div class="fixed z-40 m-1" style="width: 15%">
                         <div class="bg-transparent pr-4 pl-2 container" style="margin-top: 3rem">
                             <ul class="list-reset text-sm">
-                                <li class="flex items-center mb-2 text-sm border border-transparent hover:border-grey-light hover:bg-grey-lightest" style="padding: 5px">
+                                <li class="flex items-center mb-2 text-sm border border-transparent hover:border-grey-light hover:bg-grey-lightest cursor-pointer" style="padding: 5px" onclick="location.href='fbIndex.html'">
                                     <img class="mr-2 rounded-full" viewbox="0 0 1792 1792" style="width: 1.75em;height: 1.75em" src="photo/頭貼.jpg">
                                     <span>杜沐安</span>
                                 </li>
@@ -113,13 +114,13 @@
                                     <img class="w-4 h-4 mr-2" viewbox="0 0 1792 1792" src="icon/marketplace.png">
                                    <span>Marketplace</span>
                                 </li>
-                                <li class="flex items-center mt-2 text-sm border border-transparent hover:border-grey-light hover:bg-grey-lightest" style="padding: 5px">
-                                    <span class="text-grey-darker"><b>捷徑</b></span>
-                                </li>
-                               <li class="flex items-center text-sm border border-transparent hover:border-grey-light hover:bg-grey-lightest" style="padding: 5px">
-                                    <img class="w-4 h-4 mr-2" viewbox="0 0 1792 1792" src="bullet-list.svg">
-                                   <span>(未定)</span>
-                                </li>
+<!--                                <li class="flex items-center mt-2 text-sm border border-transparent hover:border-grey-light hover:bg-grey-lightest" style="padding: 5px">-->
+<!--                                    <span class="text-grey-darker"><b>捷徑</b></span>-->
+<!--                                </li>-->
+<!--                               <li class="flex items-center text-sm border border-transparent hover:border-grey-light hover:bg-grey-lightest" style="padding: 5px">-->
+<!--                                    <img class="w-4 h-4 mr-2" viewbox="0 0 1792 1792" src="bullet-list.svg">-->
+<!--                                   <span>(未定)</span>-->
+<!--                                </li>-->
                                 <li class="flex items-center mt-2 text-sm border border-transparent hover:border-grey-light hover:bg-grey-lightest" style="padding: 5px">
                                     <span class="text-grey-darker"><b>探索</b></span>
                                 </li>
@@ -285,11 +286,11 @@
                                 </button>
                             </div>
                             <div class="flex flex-between py-3 -mx-3 p-2">
-                                <img class="w-8 h-8 rounded-full" src="https://gravatar.com/avatar/b19536334f76e904381e09b5a8776646?s=512&d=https://static.codepen.io/assets/avatars/user-avatar-512x512-6e240cf350d2f1cc07c2bed234c3a3bb5f1b237023c204c782622e80d6b212ba.png" alt="">
+                                <img class="w-8 h-8 rounded-full" src="photo/郭如芸.jpg" alt="">
                                 <div>
                                     <div class="appearance-none w-full mx-2 bg-grey-lighter rounded-full border h-8 pl-2 py-1 text-sm">
                                         <span class="align-middle">
-                                            <a class="text-blue no-underline ml-1 hover:underline" href="#"><b>0923wong</b></a> 哪有賣
+                                            <a class="text-blue no-underline ml-1 hover:underline"><b>郭如芸</b></a> 哪有賣
                                         </span>
                                     </div>
                                      <span class="align-middle text-sm ml-3">
@@ -298,11 +299,11 @@
                                 </div>
                             </div>
                              <div class="flex flex-between py-3 -mx-3 p-2">
-                                <img class="w-8 h-8 rounded-full" src="" alt="">
+                                <img class="w-8 h-8 rounded-full" src="photo/胡庭瑋.jpg" alt="">
                                 <div>
                                     <div class="appearance-none w-full mx-2 bg-grey-lighter rounded-full border h-8 pl-2 py-1 text-sm">
                                         <span class="align-middle">
-                                            <a class="text-blue no-underline ml-1 hover:underline" href="#"><b>0923wong</b></a> 請問實體店面？謝謝
+                                            <a class="text-blue no-underline ml-1 hover:underline"><b>胡庭瑋</b></a> 請問實體店面？謝謝
                                         </span>
                                     </div>
                                      <span class="align-middle text-sm ml-3">
@@ -388,11 +389,11 @@
                                 </button>
                             </div>
                             <div class="flex flex-between py-3 -mx-3 p-2">
-                                <img class="w-8 h-8 rounded-full" src="https://gravatar.com/avatar/b19536334f76e904381e09b5a8776646?s=512&d=https://static.codepen.io/assets/avatars/user-avatar-512x512-6e240cf350d2f1cc07c2bed234c3a3bb5f1b237023c204c782622e80d6b212ba.png" alt="">
+                                <img class="w-8 h-8 rounded-full" src="photo/梁兆麟.jpg" alt="">
                                 <div>
                                     <div class="appearance-none w-full mx-2 bg-grey-lighter rounded-full border h-8 pl-2 py-1 text-sm">
                                         <span class="align-middle">
-                                            <a class="text-blue no-underline ml-1 hover:underline" href="#"><b>0923wong</b></a> 台灣真的很棒啊 只是欠缺成功的宣傳
+                                            <a class="text-blue no-underline ml-1 hover:underline"><b>梁兆麟</b></a> 台灣真的很棒啊 只是欠缺成功的宣傳
                                         </span>
                                     </div>
                                      <span class="align-middle text-sm ml-3">
@@ -401,11 +402,11 @@
                                 </div>
                             </div>
                              <div class="flex flex-between py-3 -mx-3 p-2">
-                                <img class="w-8 h-8 rounded-full" src="" alt="">
+                                <img class="w-8 h-8 rounded-full" src="photo/林依璇.jpg" alt="">
                                 <div>
                                     <div class="appearance-none w-full mx-2 bg-grey-lighter rounded-full border h-8 pl-2 py-1 text-sm">
                                         <span class="align-middle">
-                                            <a class="text-blue no-underline ml-1 hover:underline" href="#"><b>0923wong</b></a> 因為一堆堅持要中華台北的人當然看不到國旗。
+                                            <a class="text-blue no-underline ml-1 hover:underline"><b>林依璇</b></a> 因為一堆堅持要中華台北的人當然看不到國旗。
                                         </span>
                                     </div>
                                      <span class="align-middle text-sm ml-3">
