--- a/googleIndex/googleIndex.html
+++ b/googleIndex/googleIndex.html
@@ -3,9 +3,9 @@
 
   <meta charset="UTF-8">
     <title>新增分頁</title>
-    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <script src="https://cdn.bootcss.com/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <script src="bootstrap.min.js"></script>
+    <script src="jquery.min.js"></script>
 
   <!--  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" />-->
 <!--  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>-->
@@ -21,7 +21,7 @@
   <ul class="nav nav-pills">
 <!--    <li><a target='_blank' href="" class="colorfix"><button class="btn" role="button">Sign in</button></a></li>-->
     <li>
-      <a target='_blank' title="帳戶" class="firstsbuttons" ><div><img class="quad" src="bullet-list.svg" height="20" width="20"></div></a>
+      <a target='_blank' title="帳戶" class="firstsbuttons" ><div><img class="quad" src="頭貼.jpg" height="20" width="20"></div></a>
     </li>
     <li>
       <a target='_blank' title="Google apps" class="firstsbuttons"><div ><img class="appBtn" src="右上按鈕.png"  height="35" width="35"></div></a>
@@ -36,7 +36,7 @@
         </li>
         <li class="apps YT">
         </li>
-        <li class="apps map">
+        <li class="apps map" style="cursor: pointer;" onclick="location.href='../map/mapIndex.html'">
         </li>
         <li class="apps cloud">
         </li>
@@ -44,7 +44,7 @@
         </li>
         <li class="apps contact">
         </li>
-        <li class="apps mail">
+        <li class="apps mail" style="cursor: pointer;">
         </li>
         <li class="apps calender">
         </li>
