--- a/map/timeline.html
+++ b/map/timeline.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Google 地圖</title>
+    <title>時間軸</title>
+    <link rel="Shortcut Icon" type="image/x-icon" href="icon/map icon.png">
     <link rel=stylesheet type="text/css" href="tlStyle.css">
     <script src="jquery.min.js"></script>
+    <script src="tlScript.js" async></script>
 </head>
 <body style="overflow: hidden;margin: 0" class="allPage" id="allPage">
 
@@ -15,7 +17,7 @@
 
 <div class="beginRight">
     <img class="list" id="appBtn" src="icon/list.png">
-    <img class="id" src="icon/list.png">
+    <img class="id" src="icon/頭貼.jpg">
 </div>
 
 <div id="app" class="app">
@@ -25,7 +27,7 @@
         </li>
         <li class="apps YT">
         </li>
-        <li class="apps Map">
+        <li class="apps Map" style="cursor: pointer;" onclick="location.href='mapIndex.html'">
         </li>
         <li class="apps cloud">
         </li>
@@ -33,7 +35,7 @@
         </li>
         <li class="apps contact">
         </li>
-        <li class="apps mail">
+        <li class="apps mail" style="cursor: pointer;">
         </li>
         <li class="apps calender">
         </li>
@@ -45,7 +47,7 @@
 
 <div class="beginLeft">
     <div class="titleContainer">
-        <img class="titleIcon" src="icon/googleMap.png">
+        <img class="titleIcon" src="icon/googleMap.png" onclick="location.href='mapIndex.html'">
         <span class="title">時間軸</span>
         <img class="lock" src="icon/lock.png">
         <button class="today">今天</button>
@@ -189,16 +191,16 @@
                 <img class="placePhoto" src="icon/home icon.png">
                 <div>
                     <span class="placeInfo">家</span>
-                    <span class="placeInfo">2020年3月18日與另外200天</span>
+                    <span class="placeInfo">2020年4月18日與另外600天</span>
                 </div>
                 <img class="placeMore" src="icon/placeMore.png">
             </div>
-            <div class="onePlace" >
+            <div class="onePlace" onclick="setImg('公司')">
                 <span class="placeNumber">2</span>
                 <img class="placePhoto" src="icon/Company icon.png">
                 <div>
-                    <span class="placeInfo">公司</span>
-                    <span class="placeInfo">2020年3月18日與另外200天</span>
+                    <span class="placeInfo">昌盛股份有限公司</span>
+                    <span class="placeInfo">2020年4月17日與另外462天</span>
                 </div>
                 <img class="placeMore" src="icon/placeMore.png">
             </div>
@@ -207,7 +209,7 @@
                 <img class="placePhoto" src="icon/Mom's Home icon.png">
                 <div>
                     <span class="placeInfo">老家</span>
-                    <span class="placeInfo">2020年3月18日與另外200天</span>
+                    <span class="placeInfo">2020年4月5日與另外173天</span>
                 </div>
                 <img class="placeMore" src="icon/placeMore.png">
             </div>
@@ -218,7 +220,7 @@
                 <img class="placePhoto" src="icon/School icon.png">
                 <div>
                     <span class="placeInfo">臺灣國立政治大學</span>
-                    <span class="placeInfo">2020年</span>
+                    <span class="placeInfo">2020年3月19日與另外39天</span>
                 </div>
                 <img class="placeMore" src="icon/placeMore.png">
             </div>
@@ -226,8 +228,8 @@
                 <span class="placeNumber">5</span>
                 <img class="placePhoto" src="icon/Company2 icon.png">
                 <div>
-                    <span class="placeInfo">舊公司</span>
-                    <span class="placeInfo">2008年3月18日與另外200天</span>
+                    <span class="placeInfo">順隆股份有限公司舊址</span>
+                    <span class="placeInfo">2020年3月28日與另外28天</span>
                 </div>
                 <img class="placeMore" src="icon/placeMore.png">
             </div>
@@ -236,18 +238,18 @@
                 <img class="placePhoto" src="icon/Tomb icon.png">
                 <div>
                     <span class="placeInfo">墓</span>
-                    <span class="placeInfo">2020年3月18日與另外10天</span>
+                    <span class="placeInfo">2020年3月28日與另外28天</span>
                 </div>
                 <img class="placeMore" src="icon/placeMore.png">
             </div>
         </div>
         <div class="places">
-            <div class="onePlace" >
+            <div class="onePlace" onclick="setImg('看守所')">
                 <span class="placeNumber">7</span>
                 <img class="placePhoto" src="icon/icon 1.png">
                 <div>
                     <span class="placeInfo">土城看守所</span>
-                    <span class="placeInfo">2020年</span>
+                    <span class="placeInfo">2020年4月7日與另外14天</span>
                 </div>
                 <img class="placeMore" src="icon/placeMore.png">
             </div>
@@ -255,8 +257,8 @@
                 <span class="placeNumber">8</span>
                 <img class="placePhoto" src="icon/Heart1 icon.png">
                 <div>
-                    <span class="placeInfo">不重要的場所</span>
-                    <span class="placeInfo">2020年3月18日與另外20天</span>
+                    <span class="placeInfo">象山</span>
+                    <span class="placeInfo">2020年2月14日與另外2天</span>
                 </div>
                 <img class="placeMore" src="icon/placeMore.png">
             </div>
@@ -264,8 +266,8 @@
                 <span class="placeNumber">9</span>
                 <img class="placePhoto" src="icon/Heart2 icon.png">
                 <div>
-                    <span class="placeInfo">不重要的地方</span>
-                    <span class="placeInfo">2020年3月18日與另外200天</span>
+                    <span class="placeInfo">兒童新樂園</span>
+                    <span class="placeInfo">2020年1月26日</span>
                 </div>
                 <img class="placeMore" src="icon/placeMore.png">
             </div>
@@ -276,106 +278,3 @@
 
 </body>
 </html>
-
-<script>
-
-
-    let myimage = document.getElementById("myimage");
-    let originW = myimage.width;
-    let nowScale = 2;
-
-    function setImg(place){
-        if(myimage.name != place) {
-            myimage.src = "place/" + place + "2.png";
-            myimage.name = place;
-            nowScale = 2;
-        }
-    }
-
-    if (myimage.addEventListener) {
-        // IE9, Chrome, Safari, Opera
-        myimage.addEventListener("mousewheel", MouseWheelHandler, false);
-        // Firefox
-        myimage.addEventListener("DOMMouseScroll", MouseWheelHandler, false);
-    }
-    // IE 6/7/8
-    else myimage.attachEvent("onmousewheel", MouseWheelHandler);
-
-    function MouseWheelHandler(e) {
-    // cross-browser wheel delta
-        var e = window.event || e; // old IE support
-        var delta = Math.max(-1, Math.min(1, (e.wheelDelta || -e.detail)));
-        // var t = originW*0.05*delta;
-        myimage.style.width = Math.max(1300, Math.min(originW,  myimage.width + (100 * delta))) + "px";
-
-        let nowImg = myimage.name;
-
-        if(nowScale == 2 && myimage.width <= 1300){
-            myimage.src = "place/" + nowImg +"1.png";
-            myimage.style.width = "2880px";
-            nowScale = 1;
-        }else if(nowScale == 2 && myimage.width >= 2880){
-           myimage.src = "place/" + nowImg +  "3.png";
-            myimage.style.width = "1300px";
-            nowScale = 3;
-        }else if(nowScale == 3 && myimage.width <= 1300){
-            myimage.src = "place/" + nowImg + "2.png";
-            myimage.style.width = "2880px";
-            nowScale = 2;
-        }else if(nowScale == 1 && myimage.width >= 2880){
-           myimage.src = "place/" + nowImg + "2.png";
-            myimage.style.width = "1300px";
-            nowScale = 2;
-        }
-
-        console.log(myimage.name);
-        return false;
-    }
-
-    let placeBottom = document.getElementById('placeBottom');
-    let placeContainer = document.getElementById('placeContainer');
-    function often(){
-        // console.log('test');
-        placeBottom.style.visibility = 'visible';
-        placeContainer.style.transition = '0.6s';
-        placeContainer.style.right = '0vw';
-    }
-    function oftenBack(){
-        placeBottom.style.visibility = 'hidden';
-         placeContainer.style.transition = '0s';
-        placeContainer.style.right = '-81vw';
-    }
-
-
-    let allPage = document.querySelector('#allPage');
-    let app = document.querySelector('#app');
-    let appBtn = document.querySelector('#appBtn');
-
-    appBtn.onclick = function() {
-      let appStyle = window.getComputedStyle(app).getPropertyValue('display');
-      if (appStyle === 'none') {
-        app.style.display = 'inline-block';
-
-      } else {
-        app.style.display = 'none';
-      }
-    }
-
-    $(document).mouseup(function (e) {
-
-        if(app.style.display !== 'none') {
-
-            let container = $("#app");
-            let btn = $("#appBtn");
-
-            // if the target of the click isn't the container nor a descendant of the container
-            if (!container.is(e.target) && container.has(e.target).length === 0 && !btn.is(e.target)) {
-                container.hide();
-            }
-        }
-    });
-
-
-
-
-</script>
