--- a/map/mapIndex.html
+++ b/map/mapIndex.html
@@ -15,6 +15,39 @@
 <!--<img id="pic" src="place/商院2.png" onmousewheel="return zoomPic('pic');" alt="用滑鼠滾輪來縮放圖片">-->
 </div>
 
+
+<div class="beginRight">
+    <img class="list" id="appBtn" src="icon/list.png">
+    <img class="id" src="icon/頭貼.jpg">
+</div>
+
+<div id="app" class="app">
+
+      <ul class="appImage">
+        <li class="apps searchapp">
+        </li>
+        <li class="apps YT">
+        </li>
+        <li class="apps Map" style="cursor: pointer;" onclick="location.href='mapIndex.html'">
+        </li>
+        <li class="apps play">
+        </li>
+        <li class="apps Cloud">
+        </li>
+        <li class="apps contact">
+        </li>
+        <li class="apps mail" style="cursor: pointer;">
+        </li>
+        <li class="apps calender" style="cursor: pointer;">
+        </li>
+        <li class="apps photo">
+        </li>
+      </ul>
+
+</div>
+
+
+
 <div class="beginLeft">
     <div class="inputContainer">
         <div class="input">
