--- a/desktop/desktop.html
+++ b/desktop/desktop.html
@@ -71,7 +71,7 @@
     <div class="desktop">
 
       <div class="desktopApplications">
-        <div class="desktopApp drag" ondblclick="window.open('../line.html');">
+        <div class="desktopApp drag" ondblclick="window.open('../ig/index.html#/line');">
           <image src="img/line.png" height="60px" width="60px" ></image>
           <p class="appLabel">line</p>
         </div>
@@ -79,11 +79,7 @@
           <image src="img/chrome.png" height="60px" width="60px" ></image>
           <p class="appLabel">chrome</p>
         </div>
-        <div class="desktopApp drag " ondblclick="window.open('../folder.html');">
-          <image src="img/folder1.png" height="60px" width="60px" ></image>
-          <p class="appLabel">資料夾</p>
-        </div>
-        <div class="desktopApp drag " ondblclick="window.open('../folder.html');">
+        <div class="desktopApp drag " ondblclick="window.open('../ig/index.html#/forder');">
           <image src="img/folder1.png" height="60px" width="60px" ></image>
           <p class="appLabel">資料夾</p>
         </div>
@@ -105,7 +101,7 @@
       <div class="icon application chrome"  style="cursor:pointer;" onclick="window.open('../googleIndex/googleIndex.html');">
         <image src="img/chrome.png" height="40px" width="40px"></image>
       </div>
-      <div class="icon application line" style="cursor:pointer;" onclick="window.open('../line.html');">
+      <div class="icon application line" style="cursor:pointer;" onclick="window.open('../ig/index.html#/line');">
         <image src="img/line.png" height="40px" width="40px"></image>
       </div>
     </div>
@@ -173,20 +169,20 @@
             <div class="item">
               <img class="fa " src="img/word.png" style="width:30px; height:30px"></img>
               <span>Word</span></div>
-            <div class="item" style="cursor:pointer;" onclick="window.open('../trashCan.html');">
+            <div class="item">
               <img class="fa " src="img/trashCan.png" style="width:30px; height:30px"></img>
               <span>垃圾桶</span></div>
             <p class="title">最常使用</p>
             <div class="item" style="cursor:pointer;" onclick="window.open('../googleIndex.html');">
               <img class="fa " src="img/chromeIcon.png" style="width:30px; height:30px"></img>
               <span>Google Chrome</span></div>
-            <div class="item" style="cursor:pointer;" onclick="window.open('../line.html');">
+            <div class="item" style="cursor:pointer;" onclick="window.open('../ig/index.html#/line');">
               <img class="fa " src="img/lineIcon.png" style="width:30px; height:30px"></img>
               <span>Line</span></div>
-            <div class="item" style="cursor:pointer;" onclick="window.open('../forder1.html');">
+            <div class="item" style="cursor:pointer;" onclick="window.open('../ig/index.html#/forder');">
               <img class="fa " src="img/folderIcon.png" style="width:30px; height:30px"></img>
               <span>資料夾A</span></div>
-            <div class="item" style="cursor:pointer;" onclick="window.open('../memo.html');">
+            <div class="item" style="cursor:pointer;" onclick="window.open('../diary/diary.html');">
               <img class="fa " src="img/memo.png" style="width:30px; height:30px"></img>
               <span>備忘錄</span></div>
             <div class="item">
@@ -195,12 +191,12 @@
           </div>
           <div class="col-xs-6 tiles">
             <p class="title">探索
-            <div class="tile wide" onclick="window.open('../calendar.html');">
+            <div class="tile wide" onclick="window.open('../ig/index.html#/calendar');">
                 <img src="img/calendar.png" style="height:50px;width:50px;"></img>
                 <span>Calendar<i class="fa fa-calendar"></i></span></div>
               <div id="zoom" class="tile medium photos" onclick="openModal();currentSlide(1)">
                 <span>Photos<i class="fa fa-picture-o"></i></span></div>
-              <div class="tile gmail" onclick="window.open('../gmail.html');">
+              <div class="tile gmail" onclick="window.open('../gmail/index.html');">
                 <img src="img/gmail.png" style="height:30px;width:30px;"></img>
                 <span>Mail<i class="fa fa-envelope"></i></span></div>
               <div class="tile wide news" >
