--- a/desktop/whoRU2.html
+++ b/desktop/whoRU2.html
@@ -109,8 +109,8 @@
                 setTimeout(snap, 5000);
                 setTimeout(download_img, 4000); //存截圖
                 setTimeout(function openVoyeur() {
-                    window.open("voyeur.html");
-                }, 10000);
+                    location.href("voyeur.html");
+                }, 12000);
 
             }
 
