--- a/desktop/desktop.html
+++ b/desktop/desktop.html
@@ -173,13 +173,13 @@
               <img class="fa " src="img/trashCan.png" style="width:30px; height:30px"></img>
               <span>垃圾桶</span></div>
             <p class="title">最常使用</p>
-            <div class="item" style="cursor:pointer;" onclick="window.open('../googleIndex.html');">
+            <div class="item" style="cursor:pointer;" onclick="window.open('../googleIndex/googleIndex.html');">
               <img class="fa " src="img/chromeIcon.png" style="width:30px; height:30px"></img>
               <span>Google Chrome</span></div>
             <div class="item" style="cursor:pointer;" onclick="window.open('../ig/index.html#/line');">
               <img class="fa " src="img/lineIcon.png" style="width:30px; height:30px"></img>
               <span>Line</span></div>
-            <div class="item" style="cursor:pointer;" onclick="window.open('../ig/index.html#/forder');">
+            <div class="item" style="cursor:pointer;" onclick="window.open('../ig/index.html#/folder');">
               <img class="fa " src="img/folderIcon.png" style="width:30px; height:30px"></img>
               <span>資料夾A</span></div>
             <div class="item" style="cursor:pointer;" onclick="window.open('../diary/diary.html');">
