--- a/desktop/desktop.html
+++ b/desktop/desktop.html
@@ -79,7 +79,7 @@
           <image src="img/chrome.png" height="60px" width="60px" ></image>
           <p class="appLabel">chrome</p>
         </div>
-        <div class="desktopApp drag " ondblclick="window.open('../ig/index.html#/forder');">
+        <div class="desktopApp drag " ondblclick="window.open('../ig/index.html#/folder');">
           <image src="img/folder1.png" height="60px" width="60px" ></image>
           <p class="appLabel">資料夾</p>
         </div>
