--- a/googleIndex/googleIndex.html
+++ b/googleIndex/googleIndex.html
@@ -26,8 +26,8 @@
     <li>
       <a target='_blank' title="Google apps" class="firstsbuttons"><div ><img class="appBtn" src="右上按鈕.png"  height="35" width="35"></div></a>
     </li>
-    <li><a target='_blank' class="firstsbuttons" href="">Image</a></li>
-    <li><a target='_blank' class="firstsbuttons" href="">Gmail</a></li>
+    <li><a target='_blank' class="firstsbuttons">Image</a></li>
+    <li><a target='_blank' class="firstsbuttons" href="../gmail/index.html">Gmail</a></li>
   </ul>
   <div id="app" class="app">
 
@@ -44,9 +44,9 @@
         </li>
         <li class="apps contact">
         </li>
-        <li class="apps mail" style="cursor: pointer;">
+        <li class="apps mail" style="cursor: pointer;"  onclick="location.href='../gmail/index.html'">
         </li>
-        <li class="apps calender">
+        <li class="apps calender" style="cursor: pointer;" onclick="location.href='../ig/index.html#/calender'">
         </li>
         <li class="apps photo">
         </li>
