--- a/map/mapIndex.html
+++ b/map/mapIndex.html
@@ -36,9 +36,9 @@
         </li>
         <li class="apps contact">
         </li>
-        <li class="apps mail" style="cursor: pointer;">
+        <li class="apps mail" style="cursor: pointer;"  onclick="location.href='../gmail/index.html'">
         </li>
-        <li class="apps calender" style="cursor: pointer;">
+        <li class="apps calender" style="cursor: pointer;" onclick="location.href='../ig/index.html#/calender'">
         </li>
         <li class="apps photo">
         </li>
