'連結和diary修正'

--- a/map/timeline.html
+++ b/map/timeline.html
@@ -23,7 +23,7 @@
 <div id="app" class="app">
 
       <ul class="appImage">
-        <li class="apps searchapp">
+        <li class="apps searchapp" style="cursor: pointer;" onclick="location.href='../googleIndex/googleIndex.html'">
         </li>
         <li class="apps YT">
         </li>
