--- a/map/mapIndex.html
+++ b/map/mapIndex.html
@@ -24,7 +24,7 @@
 <div id="app" class="app">
 
       <ul class="appImage">
-        <li class="apps searchapp">
+        <li class="apps searchapp" onclick="location.href='../googleIndex/googleIndex.html'">
         </li>
         <li class="apps YT">
         </li>
