--- a/map/mapIndex.html
+++ b/map/mapIndex.html
@@ -171,7 +171,7 @@
             <span class="itemsTitle"><b>位置資訊分享</b></span>
         </li>
         <li class="itemsList">
-            <img class="itemsBtn" src="icon/Your Places g.png">
+            <img class="itemsBtn" src="icon/Your places g.png">
             <span class="itemsTitle"><b>你的位置</b></span>
         </li>
         <li class="itemsList">
@@ -183,15 +183,15 @@
             <span id="tlTitle" class="itemsTitle"><b>你的時間軸</b></span>
         </li>
         <li class="itemsList">
-            <img class="itemsBtn" src="icon/share g.png">
+            <img class="itemsBtn" src="icon/Share g.png">
             <span class="itemsTitle"><b>分享或嵌入地圖</b></span>
         </li>
         <li class="itemsList">
-            <img class="itemsBtn" src="icon/print g.png">
+            <img class="itemsBtn" src="icon/Print g.png">
             <span class="itemsTitle"><b>列印</b></span>
         </li>
         <li class="itemsList">
-            <img class="itemsBtn" src="icon/Your Data g.png">
+            <img class="itemsBtn" src="icon/Your data g.png">
             <span class="itemsTitle"><b>你在Google地圖中的資料</b></span>
         </li>
         <hr style="margin-top: 4px;margin-bottom: 4px; border: 0.5px solid lightgray">
