更改桌面圖

--- a/desktop/desktop.html
+++ b/desktop/desktop.html
@@ -23,22 +23,22 @@
 
         <div class="mySlides">
           <div class="numbertext">1 / 4</div>
-          <img src="img/IMG_5546.jpg" style="width:100%">
+          <img src="img/photo_IMG_5198.jpg" style="width:100%">
         </div>
 
         <div class="mySlides">
           <div class="numbertext">2 / 4</div>
-          <img src="img/IMG_5517.jpg" style="width:100%">
+          <img src="img/photo_IMG_5265.jpg" style="width:100%">
         </div>
 
         <div class="mySlides">
           <div class="numbertext">3 / 4</div>
-          <img src="img/IMG_5572.jpg" style="width:100%">
+          <img src="img/photo_IMG_5413.png" style="width:100%">
         </div>
 
         <div class="mySlides">
           <div class="numbertext">4 / 4</div>
-          <img src="img/IMG_5517.jpg" style="width:100%">
+          <img src="img/photo_IMG_5508.jpg" style="width:100%">
         </div>
 
         <!-- Next/previous controls -->
@@ -52,19 +52,19 @@
 
         <!-- Thumbnail image controls -->
         <div class="column">
-          <img class="demo" src="img/IMG_5546.jpg" style="width:100%" onclick="currentSlide(1)" alt="這裡要打什麼？A">
+          <img class="demo" src="img/photo_IMG_5198.jpg" style="width:100%" onclick="currentSlide(1)" alt="IMG_5198.jpg">
         </div>
 
         <div class="column">
-          <img class="demo" src="img/IMG_5517.jpg" style="width:100%" onclick="currentSlide(2)" alt="這裡要打什麼？B">
+          <img class="demo" src="img/photo_IMG_5265.jpg" style="width:100%" onclick="currentSlide(2)" alt="IMG_5265.jpg">
         </div>
 
         <div class="column">
-          <img class="demo" src="img/IMG_5572.jpg" style="width:100%" onclick="currentSlide(3)" alt="這裡要打什麼？C">
+          <img class="demo" src="img/photo_IMG_5413.png" style="width:100%" onclick="currentSlide(3)" alt="IMG_5413.png">
         </div>
 
         <div class="column">
-          <img class="demo" src="img/IMG_5517.jpg" style="width:100%" onclick="currentSlide(4)" alt="這裡要打什麼？D">
+          <img class="demo" src="img/photo_IMG_5508.jpg" style="width:100%" onclick="currentSlide(4)" alt="IMG_5508.jpg">
         </div>
       </div>
     </div>
