儲存圖片功能

--- a/desktop/whoRU2.html
+++ b/desktop/whoRU2.html
@@ -142,7 +142,7 @@
                 document
                 $('.album').append($('<div class="snap" style="background-image: url(' + x + ')" +"></div>'));
 
-                拍的當下順便存
+                //拍的當下順便存
                 var d = new Date();
                 var link = document.createElement('a');
                 link.download = d
