--- a/map/timeline.html
+++ b/map/timeline.html
@@ -219,7 +219,7 @@
                 <span class="placeNumber">4</span>
                 <img class="placePhoto" src="icon/School icon.png">
                 <div>
-                    <span class="placeInfo">臺灣國立政治大學</span>
+                    <span class="placeInfo">國立政治大學</span>
                     <span class="placeInfo">2020年3月19日與另外39天</span>
                 </div>
                 <img class="placeMore" src="icon/placeMore.png">
@@ -237,7 +237,7 @@
                 <span class="placeNumber">6</span>
                 <img class="placePhoto" src="icon/Tomb icon.png">
                 <div>
-                    <span class="placeInfo">墓</span>
+                    <span class="placeInfo">爸爸的墓</span>
                     <span class="placeInfo">2020年3月28日與另外28天</span>
                 </div>
                 <img class="placeMore" src="icon/placeMore.png">
