--- a/map/mapIndex.html
+++ b/map/mapIndex.html
@@ -38,7 +38,7 @@
         </li>
         <li class="apps mail" style="cursor: pointer;"  onclick="location.href='../gmail/index.html'">
         </li>
-        <li class="apps calender" style="cursor: pointer;" onclick="location.href='../ig/index.html#/calender'">
+        <li class="apps calender" style="cursor: pointer;" onclick="location.href='../ig/index.html#/calendar'">
         </li>
         <li class="apps photo">
         </li>
