--- a/desktop/voyeur.html
+++ b/desktop/voyeur.html
@@ -11,9 +11,15 @@
 
     <body>
         <section></section>
-        <div class="error blink">
-            <p>404:ERROR</p>
+        <div class="error">
+            <p class="blink">404:ERROR</p>
+            <div class="qrcode">
+                <img  align="bottom"src="../desktop/img/qrcode.png"></img><br>
+
+            </div>
+            <p class='small_p'>快去回報吧</p>
         </div>
+
         <div class="password hidden"></div>
         <!-- partial -->
         <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
